# codex

./: .bazelrc  AGENTS.md  BUILD.bazel  defs.bzl  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  workspace_root_test_launcher.bat.tpl  workspace_root_test_launcher.sh.tpl
.github/scripts/: run-bazel-ci.sh  verify_tui_core_boundary.py
.github/workflows/: bazel.yml  ci.yml  rust-release-windows-cross-compile-poc.yml  rust-release.yml
codex-cli/scripts/: build_npm_package.py  package_metadata.py  test_build_npm_package.py
codex-rs/: Cargo.toml  README.md
codex-rs/agent-graph-store/: Cargo.toml
codex-rs/agent-graph-store/examples/: generate-proto.rs
codex-rs/agent-graph-store/scripts/: generate-proto.sh
codex-rs/agent-graph-store/src/: lib.rs  local.rs
codex-rs/agent-graph-store/src/remote/: AGENTS.md  helpers.rs  mod.rs
codex-rs/agent-graph-store/src/remote/proto/: codex.agent_graph_store.v1.proto  codex.agent_graph_store.v1.rs
codex-rs/agent-identity/src/: lib.rs
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  reducer.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-daemon/: Cargo.toml  README.md
codex-rs/app-server-daemon/src/: client.rs  lib.rs  managed_install.rs  settings.rs  update_loop.rs
codex-rs/app-server-daemon/src/backend/: mod.rs  pid.rs  systemd.rs
codex-rs/app-server-test-client/src/: lib.rs
codex-rs/app-server/src/: analytics_events.rs  bespoke_event_handling.rs  codex_message_processor.rs  command_exec.rs  config_api.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  in_process.rs  lib.rs  main.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  outgoing_message.rs  request_processors.rs  thread_state.rs  thread_status.rs  transport_tests.rs
codex-rs/apply-patch/: Cargo.toml
codex-rs/apply-patch/examples/: compare_streaming_parser.rs
codex-rs/apply-patch/src/: invocation.rs  lib.rs  parser.rs  standalone_executable.rs
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: fork_env.rs  lib.rs
codex-rs/async-utils/src/: lib.rs
codex-rs/aws-auth/src/: lib.rs
codex-rs/backend-client/src/: client.rs  types.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  (+5 more)
codex-rs/codex-api/: Cargo.toml
codex-rs/config/: Cargo.toml
codex-rs/core/: Cargo.toml  README.md  config.schema.json  root_agent_prompt.md  root_agent_watchdog_prompt.md  subagent_prompt.md  watchdog_agent_prompt.md
codex-rs/core-plugins/: Cargo.toml
codex-rs/devicecheck-probe/: Info.plist
codex-rs/docs/: mcp_subspan_tracing.md
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/executor-fs/: BUILD.bazel  Cargo.toml
codex-rs/executor-fs/src/: lib.rs
codex-rs/file-system/: Cargo.toml
codex-rs/git-utils/: Cargo.toml
codex-rs/journal/: Cargo.toml  README.md
codex-rs/journal/src/: context_builder.rs  journal.rs  lib.rs  render.rs  tests.rs
codex-rs/models-manager/: models.json
codex-rs/rmcp-client/: Cargo.toml
codex-rs/rollout/: BUILD.bazel  Cargo.toml
codex-rs/rollout/fixtures/session-state/: session-state-v2-closed-completed.json  session-state-v2-open-completed.json
codex-rs/rollout/src/: lib.rs  list.rs  metadata.rs  metadata_tests.rs  policy.rs  recorder.rs  recorder_tests.rs  session_index_tests.rs  session_state.rs  session_state_contract.rs  tests.rs
codex-rs/terminal-detection/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/web-server/: BUILD.bazel  Cargo.toml
codex-rs/web-server/assets/: index.html
codex-rs/web-server/assets/assets/: ghostty-vt-BG4Ub6dk.wasm  index-DZyd-Z17.css  index-DcK3rtbT.js
codex-rs/web-server/src/: lib.rs
codex-rs/windows-sandbox-rs/: BUILD.bazel  Cargo.toml
codex-webui/: index.html  package.json  protocol.mjs  server.mjs  tsconfig.json
codex-webui/scripts/: sync-rust-assets.mjs
codex-webui/src/: main.ts  styles.css
codex-webui/tests/: protocol.test.mjs  server.test.mjs
docs/: config.md
patches/: v8_source_portability.patch
scripts/: stage_npm_packages.py  stage_standalone_installer_archives.py
scripts/install/: install.ps1  install.sh
sdk/python/: README.md
signatures/: cla.json
(+977 files in other folders)
