[package]
edition.workspace = true
license.workspace = true
name = "codex-agent-graph-store"
version.workspace = true

[lib]
name = "codex_agent_graph_store"
path = "src/lib.rs"

[[example]]
name = "generate-proto"
path = "examples/generate-proto.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-protocol = { workspace = true }
codex-state = { workspace = true }
prost = "0.14.3"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["router", "transport"] }
tonic-prost-build = { version = "=0.14.3", default-features = false, features = ["transport"] }
