[package]
name = "codex-journal"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
codex-utils-cache = { workspace = true }
codex-utils-output-truncation = { workspace = true }
codex-protocol = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "webp"] }
indexmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
